# optimum-habana

./: .gitignore  0001-fix-sd-readme-Added-sd3-measure-step.patch  MANIFEST.in  Makefile  README.md  ci_test.sh  conftest.py  daemon_ci.json  hl-smi_log.txt  performance_inference.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_diffusers.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: build_documentation.yml  build_main_documentation.yml  build_pr_documentation.yml  check_code_quality.yml  check_doc_build.yml  delete_doc_comment.yml  failed_code_quality_check_comment.yml  fast_tests.yml  pr_is_mergeable.yml  slow_tests.yml  slow_tests_gaudi2.yml  slow_tests_gaudi3.yml  test_accelerate_gaudi2.yml  test_upstream.yml  test_upstream_gaudi1.yml  test_upstream_gaudi2.yml  upload_pr_documentation.yml  upstream.yml  upstream_tests.yml
docs/: Dockerfile
docs/source/: _redirects.yml  _toctree.yml  accelerate_training.mdx  deepspeed.mdx  distributed.mdx  gaudi_config.mdx  index.mdx  installation.mdx  pretraining.mdx  quickstart.mdx  single_hpu.mdx  trainer.mdx
examples/: README.md  common_parser.py  gaudi_spawn.py
examples/audio-classification/: README.md  requirements.txt  run_audio_classification.py
examples/contrastive-image-text/: README.md  bridgetower_finetuning.ipynb  clip_media_pipe.py  clip_mediapipe_dataloader.py  habana_dataloader_trainer.py  mediapipe_dataloader.py  requirements.txt  run_bridgetower.py  run_clip.py
examples/controlnet/: README.md  train_controlnet.py  (+2 more)
notebooks/: AI _HW_Summit_2022.ipynb  AI_HW_Summit_2022.ipynb  deepspeed_zero_2.json
tests/: Habana_Validated_Models.md  clip_coco_utils.py  create_diff_file_for_example.py  mixtral_auto.py  pipeline_params.py  requirements.txt  test_bnb_inference.py  test_bnb_qlora.py  test_clipseg.py  test_custom_file_input.py  test_ddpo_trainer.py  test_diffusers.py  test_encoder_decoder.py  test_encoder_decoder_text_summarization.py  test_encoder_decoder_translation.py  test_examples.py  test_examples_match_transformers.py  test_feature_extraction.py  test_features.py  test_fp8_examples.py  test_fsdp_examples.py  test_functional_text_generation_example.py  test_fx.py  test_gaudi_configuration.py  test_habana_profiler_integration.py  test_habana_profiler_unit.py  test_image_classification.py  test_image_segmentation.py  test_image_to_text_example.py  test_language_modeling_example.py  test_lora_vlm.py  test_modelenabling.py  test_object_detection.py  test_object_segmentation.py  test_openclip_vqa.py  test_peft_inference.py  test_pipeline.py  test_pipelines_common.py  test_sentence_transformers.py  test_sft_train.py  (+14 more)
text-generation-inference/: Dockerfile  Makefile  README.md  build.sh  gen.sh  run.sh  run2.sh
text-generation-inference/server/: Makefile  pyproject.toml  requirements.txt
text-generation-inference/server/text_generation_server/: cli.py  server.py  tgi_service.py
text-generation-inference/server/text_generation_server/models/: __init__.py  bloom.py  causal_lm.py  model.py  santacoder.py
text-generation-inference/server/text_generation_server/utils/: dist.py  logits_process.py  tokens.py  watermark.py
(+952 files in other folders)
