[tool.poetry]
name = "text-generation-server"
version = "1.1.0"
description = "Text Generation Inference Python gRPC Server"
authors = ["Olivier Dehaene <olivier@huggingface.co>"]

[tool.poetry.scripts]
text-generation-server = 'text_generation_server.cli:app'

[tool.poetry.dependencies]
huggingface-hub = "^0.16.4"
deepspeed = { git = "https://github.com/HabanaAI/DeepSpeed.git", branch = "1.13.0" }
optimum-habana =  { git = "https://github.com/huggingface/optimum-habana.git", branch = "main" }

[tool.pytest.ini_options]
markers = ["private: marks tests as requiring an admin hf token (deselect with '-m \"not private\"')"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
